# Assesment-Calendar-App

./: Assessment Calendar App.md  Cargo.toml  Interview with Michael.txt  InterviewWithMichael.md  Readme.md  Test Senior Assessment Calendar (3).xlsx  Test Senior Assessment Calendar (4).xlsx  Test Senior Assessment Calendar (5).xlsx  Test Senior Assessment Calendar (6).xlsx  Test Senior Assessment Calendar (7).xlsx  Test Senior Assessment Calendar (8).xlsx  Test Senior Assessment Calendar (9).xlsx  Test Senior Assessment Calendar(Sheet1).csv  Test Senior Assessment Calendar.xlsx  assesment_app.py  classColor.json  extractdata.py  main.py  prototype1.py  prototype2.py  prototype3.py  themes.json
.obsidian/: workspace.json
data/: ui_state.json  user.json  year11.json  year12.json
settings/: classColor.json  settings.json
src/: main.rs
