[package]
name = "assesmentCalendarApp"
build = "build.rs"
version = "0.1.0"
edition = "2024"
authors = ["Dexter Hart","DexterH@oranaschool.com"]
description = "App to replace the Senior Assesment Calendar and improve usability."
documentation = ""
repository = ""
licence = ""
licence-file = ""

[dependencies]
calamine = "0.31.0"
slint = "1.14.0"

[build-dependencies]
slint-build = "1.14"